Closed Bug 1498898 Opened 7 years ago Closed 7 years ago

Terminal warnings "Unknown widget type" when cursor passes over elements in toolbox

Categories

(Core :: Widget: Gtk, defect, P1)

64 Branch
Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
firefox-esr60 --- unaffected
firefox62 --- unaffected
firefox63 --- unaffected
firefox64 --- fixed
firefox65 --- fixed

People

(Reporter: ke5trel, Assigned: stransky)

References

(Blocks 1 open bug)

Details

(Keywords: regression)

Attachments

(1 file)

Since Bug 1498356, when the mouse cursor passes over different elements in the toolbox, the following warning appears repeatedly in the terminal: > ** (firefox:3240): WARNING **: 18:04:15.167: Unknown widget type: 95
I have the same problem with: 64.0a1 (2018-10-16) (64-bit) status-firefox64: --- → affected
That's because we introduced a MOZ_GTK_HEADER_BAR_BUTTON_BOX widget but we don't want to draw it. I'm thinking of the best way how to handle it.
Assignee: nobody → stransky
Priority: -- → P1
Pushed by ccoroiu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0a63507e990c Don't draw container-only widgets, r=jhorak
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Comment on attachment 9019012 [details] Bug 1498898 - Don't draw container-only widgets, r=jhorak [Beta/Release Uplift Approval Request] Feature/Bug causing the regression: Bug 1498356 User impact if declined: Error messages on command line when titlebar is disabled Is this code covered by automated tests?: No Has the fix been verified in Nightly?: Yes Needs manual test from QE?: No If yes, steps to reproduce: List of other uplifts needed: None Risk to taking this patch: Low Why is the change risky/not risky? (and alternatives if risky): Minor code change in theme rendering. String changes made/needed: none
Attachment #9019012 - Flags: approval-mozilla-beta?
Comment on attachment 9019012 [details] Bug 1498898 - Don't draw container-only widgets, r=jhorak [Triage Comment] Fixes a spurious console warning on Linux. Approved for 64.0b6.
Attachment #9019012 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: