Bug 1498898 - Don't draw container-only widgets. r=jhorak, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D9379

--HG--
extra : source : 0a63507e990c0dbf2fb668880cee8097d4205511